--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "symfony/validator": "4.2.*",
     "symfony/web-link": "4.2.*",
     "symfony/yaml": "4.2.*",
-    "ext-json": "*"
+    "ext-json": "*",
+    "ext-curl": "*"
   },
   "require-dev": {
     "symfony/debug-pack": "*",
