--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
   "require": {
     "php": "^7.1.3",
     "ext-ctype": "*",
+    "ext-curl": "*",
     "ext-iconv": "*",
+    "ext-json": "*",
     "sensio/framework-extra-bundle": "^5.1",
     "symfony/asset": "4.2.*",
     "symfony/console": "4.2.*",
@@ -24,8 +26,7 @@
     "symfony/validator": "4.2.*",
     "symfony/web-link": "4.2.*",
     "symfony/yaml": "4.2.*",
-    "ext-json": "*",
-    "ext-curl": "*"
+    "webmozart/assert": "^1.4"
   },
   "require-dev": {
     "symfony/debug-pack": "*",
