--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "symfony/validator": "4.2.*",
     "symfony/web-link": "4.2.*",
     "symfony/yaml": "4.2.*",
+    "twig/twig": "^2.7",
     "webmozart/assert": "^1.4"
   },
   "require-dev": {
