--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "symfony/flex": "^1.2",
     "symfony/form": "4.2.*",
     "symfony/framework-bundle": "4.2.*",
+    "symfony/messenger": "4.2.*",
     "symfony/mime": "^4.3@dev",
     "symfony/monolog-bundle": "^3.1",
     "symfony/orm-pack": "*",
