--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "symfony/validator": "4.2.*",
     "symfony/web-link": "4.2.*",
     "symfony/yaml": "4.2.*",
+    "twig/extensions": "^1.5",
     "twig/twig": "^2.7",
     "webmozart/assert": "^1.4"
   },
