--- a/composer.json
+++ b/composer.json
@@ -2,34 +2,36 @@
   "type": "project",
   "license": "proprietary",
   "require": {
-    "php": "^7.1.3",
+    "php": "^7.3",
     "ext-ctype": "*",
     "ext-curl": "*",
     "ext-iconv": "*",
     "ext-json": "*",
-    "sensio/framework-extra-bundle": "^5.1",
-    "symfony/asset": "4.2.*",
-    "symfony/console": "4.2.*",
-    "symfony/dotenv": "4.2.*",
-    "symfony/expression-language": "4.2.*",
-    "symfony/flex": "^1.2",
-    "symfony/form": "4.2.*",
-    "symfony/framework-bundle": "4.2.*",
-    "symfony/messenger": "4.2.*",
-    "symfony/mime": "^4.3@dev",
-    "symfony/monolog-bundle": "^3.1",
+    "nesbot/carbon": "^2.21",
+    "sensio/framework-extra-bundle": "^5.4",
+    "symfony/asset": "4.3.*",
+    "symfony/console": "4.3.*",
+    "symfony/dotenv": "4.3.*",
+    "symfony/expression-language": "4.3.*",
+    "symfony/flex": "^1.4",
+    "symfony/form": "4.3.*",
+    "symfony/framework-bundle": "4.3.*",
+    "symfony/http-client": "4.3.*",
+    "symfony/mailer": "^4.3",
+    "symfony/messenger": "4.3.*",
+    "symfony/mime": "^4.3",
+    "symfony/monolog-bundle": "^3.4",
     "symfony/orm-pack": "*",
-    "symfony/process": "4.2.*",
-    "symfony/security-bundle": "4.2.*",
+    "symfony/process": "4.3.*",
+    "symfony/security-bundle": "4.3.*",
     "symfony/serializer-pack": "*",
-    "symfony/swiftmailer-bundle": "^3.1",
-    "symfony/translation": "4.2.*",
-    "symfony/twig-bundle": "4.2.*",
-    "symfony/validator": "4.2.*",
-    "symfony/web-link": "4.2.*",
-    "symfony/yaml": "4.2.*",
+    "symfony/translation": "4.3.*",
+    "symfony/twig-bundle": "4.3.*",
+    "symfony/validator": "4.3.*",
+    "symfony/web-link": "4.3.*",
+    "symfony/yaml": "4.3.*",
     "twig/extensions": "^1.5",
-    "twig/twig": "^2.7",
+    "twig/twig": "^2.11",
     "webmozart/assert": "^1.4"
   },
   "require-dev": {
@@ -80,7 +82,7 @@
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "4.2.*"
+      "require": "4.3.*"
     }
   }
 }
