--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "ext-curl": "*",
     "ext-iconv": "*",
     "ext-json": "*",
+    "beberlei/doctrineextensions": "^1.2",
     "nesbot/carbon": "^2.21",
     "sensio/framework-extra-bundle": "^5.4",
     "symfony/asset": "4.3.*",
