--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,12 @@
     "webmozart/assert": "^1.4"
   },
   "require-dev": {
+    "doctrine/data-fixtures": "^1.3",
     "symfony/debug-pack": "*",
     "symfony/maker-bundle": "^1.0",
     "symfony/profiler-pack": "*",
-    "symfony/test-pack": "*"
+    "symfony/test-pack": "*",
+    "theofidry/alice-data-fixtures": "^1.1"
   },
   "config": {
     "preferred-install": {
