--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
   },
   "require-dev": {
     "doctrine/data-fixtures": "^1.3",
+    "doctrine/doctrine-fixtures-bundle": "^3.2",
     "symfony/debug-pack": "*",
     "symfony/maker-bundle": "^1.0",
     "symfony/profiler-pack": "*",
