--- a/config/packages/doctrine_extension.yaml
+++ b/config/packages/doctrine_extension.yaml
@@ -4,3 +4,4 @@ doctrine:
             string_functions:
                 MONTH: DoctrineExtensions\Query\Mysql\Month
                 YEAR: DoctrineExtensions\Query\Mysql\Year
+                DAY: DoctrineExtensions\Query\Mysql\Day
