--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@
 /.idea
 /*.sql
 ###< acmarche/grr ###
+###> friendsofphp/php-cs-fixer ###
+/.php_cs
+/.php_cs.cache
+###< friendsofphp/php-cs-fixer ###
