--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "ext-iconv": "*",
     "ext-json": "*",
     "beberlei/doctrineextensions": "^1.2",
+    "friendsofphp/php-cs-fixer": "^2.15",
     "nesbot/carbon": "^2.21",
     "sensio/framework-extra-bundle": "^5.4",
     "symfony/asset": "4.3.*",
