--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
     "ext-iconv": "*",
     "ext-json": "*",
     "beberlei/doctrineextensions": "^1.2",
-    "friendsofphp/php-cs-fixer": "^2.15",
     "nesbot/carbon": "^2.21",
     "sensio/framework-extra-bundle": "^5.4",
     "symfony/asset": "4.3.*",
@@ -39,6 +38,11 @@
   "require-dev": {
     "doctrine/data-fixtures": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.2",
+    "friendsofphp/php-cs-fixer": "^2.15",
+    "phpstan/extension-installer": "^1.0",
+    "phpstan/phpstan": "^0.11.12",
+    "phpstan/phpstan-doctrine": "^0.11.5",
+    "phpstan/phpstan-symfony": "^0.11.6",
     "symfony/debug-pack": "*",
     "symfony/maker-bundle": "^1.0",
     "symfony/profiler-pack": "*",
