--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,10 @@
     "phpstan/phpstan": "^0.11.12",
     "phpstan/phpstan-doctrine": "^0.11.5",
     "phpstan/phpstan-symfony": "^0.11.6",
+    "rector/rector": "^0.5.9",
     "symfony/debug-pack": "*",
     "symfony/maker-bundle": "^1.0",
+    "symfony/phpunit-bridge": "^4.3",
     "symfony/profiler-pack": "*",
     "symfony/test-pack": "*",
     "theofidry/alice-data-fixtures": "^1.1"
