--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,9 +26,10 @@ services:
     resource: '../src/Controller'
     tags: ['controller.service_arguments']
 
-  App\Modules\ModuleSender:
+  #il faut ajouter un constructeur iterable
+  #App\Modules\ModuleSender:
     # inject all services tagged with app.handler as first argument
-    arguments: [!tagged grr_module]
+  #  arguments: [!tagged grr_module]
 
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
