--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "ext-json": "*",
     "beberlei/doctrineextensions": "^1.2",
     "nesbot/carbon": "^2.21",
+    "phpunit/phpunit": "^8.3",
     "sensio/framework-extra-bundle": "^5.4",
     "symfony/asset": "4.3.*",
     "symfony/console": "4.3.*",
@@ -38,17 +39,17 @@
   "require-dev": {
     "doctrine/data-fixtures": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.2",
-    "symfony/debug-pack": "*",
-    "symfony/maker-bundle": "^1.0",
-    "symfony/phpunit-bridge": "^4.3",
-    "symfony/profiler-pack": "*",
-    "symfony/test-pack": "*",
     "friendsofphp/php-cs-fixer": "^2.15",
     "phpstan/extension-installer": "^1.0",
     "phpstan/phpstan": "^0.11.12",
     "phpstan/phpstan-doctrine": "^0.11.5",
     "phpstan/phpstan-symfony": "^0.11.6",
     "rector/rector": "^0.5.9",
+    "symfony/debug-pack": "*",
+    "symfony/maker-bundle": "^1.0",
+    "symfony/phpunit-bridge": "^4.3",
+    "symfony/profiler-pack": "*",
+    "symfony/test-pack": "^1.0",
     "theofidry/alice-data-fixtures": "^1.1"
   },
   "config": {
