--- a/config/packages/dev/rector.yaml
+++ b/config/packages/dev/rector.yaml
@@ -1,3 +1,4 @@
 parameters:
-  autoload_paths:
+  autoload_files:
     - 'bin/.phpunit/phpunit-6.5/vendor/autoload.php'
+    - 'vendor/autoload.php'
