--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "ext-iconv": "*",
     "ext-json": "*",
     "beberlei/doctrineextensions": "^1.2",
+    "carbon-cli/carbon-cli": "^1.1",
     "nesbot/carbon": "^2.21",
     "sensio/framework-extra-bundle": "^5.4",
     "symfony/asset": "4.3.*",
@@ -49,7 +50,8 @@
     "symfony/maker-bundle": "^1.0",
     "symfony/profiler-pack": "*",
     "symfony/test-pack": "^1.0",
-    "theofidry/alice-data-fixtures": "^1.1"
+    "theofidry/alice-data-fixtures": "^1.1",
+    "phpspec/phpspec": "^5.1"
   },
   "config": {
     "preferred-install": {
