--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
   "require-dev": {
     "doctrine/data-fixtures": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.2",
+    "friends-of-behat/symfony-extension": "^2.0",
     "friendsofphp/php-cs-fixer": "^2.15",
+    "phpspec/phpspec": "^5.1",
     "phpstan/extension-installer": "^1.0",
     "phpstan/phpstan": "^0.11.12",
     "phpstan/phpstan-doctrine": "^0.11.5",
@@ -46,11 +48,10 @@
     "rector/rector": "^0.5.9",
     "symfony/debug-pack": "*",
     "symfony/maker-bundle": "^1.0",
+    "symfony/panther": "^0.4.1",
     "symfony/profiler-pack": "*",
     "symfony/test-pack": "^1.0",
-    "symfony/panther": "^0.4.1",
-    "theofidry/alice-data-fixtures": "^1.1",
-    "phpspec/phpspec": "^5.1"
+    "theofidry/alice-data-fixtures": "^1.1"
   },
   "config": {
     "preferred-install": {
@@ -93,7 +94,7 @@
   },
   "extra": {
     "symfony": {
-      "allow-contrib": false,
+      "allow-contrib": true,
       "require": "4.3.*"
     }
   }
