--- a/src/DataFixtures/entry.yaml
+++ b/src/DataFixtures/entry.yaml
@@ -3,4 +3,6 @@ App\Entity\Entry:
       name: 'Test'
       start_time: '<dateTimeBetween("-200 days", "now")>'
       end_time: '<dateTimeBetween($start_time, "now")>'
-      room: '@room'
+      room: '@room1'
+      entry_type: '@type_entry1'
+
