--- a/src/DataFixtures/entry.yaml
+++ b/src/DataFixtures/entry.yaml
@@ -4,5 +4,5 @@ App\Entity\Entry:
       start_time: '<dateTimeBetween("-200 days", "now")>'
       end_time: '<dateTimeBetween($start_time, "now")>'
       room: '@room1'
-      entry_type: '@type_entry1'
+      type: '@type_entry1'
 
