--- a/src/DataFixtures/room.yaml
+++ b/src/DataFixtures/room.yaml
@@ -2,3 +2,8 @@ App\Entity\Room:
   room{1..5}:
       __construct: ['@area_Esquare']
       name: '<word()>'
+  room_{1..3}:
+   # __construct: ['@area_Hdv'] #
+   # __construct: ['@dummy_<current()>'] #prend le premier area pour le premier room, puis 2...
+    __construct: ['@dummy_*'] #au hasard
+    name: '<word()>'
