dummy fixtures bug busy

--- a/src/DataFixtures/entry_busy.yaml
+++ b/src/DataFixtures/entry_busy.yaml
@@ -1,7 +1,13 @@
 App\Entity\Entry:
   entry_busy_1:
-    name: 'Réunion occupée'
+    name: 'Réunion occupée par Henallux' #16h00 => 17h20
     start_time: '<carbonDateTime(2019,8,21,16,30)>'
     end_time: '<carbonDateTime(2019,8,21,18,20)>'
     room: '@room_relax'
+    type: '@type_entry_D'
+  entry_busy_2:
+    name: 'Réunion occupée par détente' #11h00 => 17h40
+    start_time: '<carbonDateTime(2019,8,21,10,30)>'
+    end_time: '<carbonDateTime(2019,8,21,15,20)>'
+    room: '@room_cafetaria'
     type: '@type_entry_D'
