--- a/src/DataFixtures/periodicity.yaml
+++ b/src/DataFixtures/periodicity.yaml
@@ -32,3 +32,8 @@ App\Entity\Periodicity:
     type: '2' #every week
     week_repeat: '2' #toutes les 2 semaines
     week_days: [3,6] #wednesday, saturday
+
+  periodicity_with_common_day:
+    entry: '@entry_with_common_date'
+    end_time: '<carbonDate(2019,12,6)>' #debut 2019,12,3
+    type: '1' #every day
