--- a/src/DataFixtures/periodicity.yaml
+++ b/src/DataFixtures/periodicity.yaml
@@ -36,5 +36,5 @@ App\Entity\Periodicity:
   periodicity_with_common_day:
     entry: '@entry_with_common_date'
     end_time: '<carbonDate(2019,12,6)>' #debut 2019,12,3
-    type: '1' #every day
-    #type: '!php/const:App\GrrData\PeriodicityConstant::EVERY_DAY' #not work
+    type2: '1' #every day
+    #type: !php/const App\Periodicity\PeriodicityConstant::EVERY_DAY #not work
