--- a/src/DataFixtures/area_random.yaml
+++ b/src/DataFixtures/area_random.yaml
@@ -1,6 +1,7 @@
 App\Entity\Area:
-  area_{Esquare, Hdv}:
-    name: '<current()>'
+  area_{1..10}:
+    name: <company()>
     start_time: <numberBetween(7,9)>
     end_time: <numberBetween(17,23)>
     is_24_hour_format: <boolean(95)>
+
