--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: php
 
+php:
+  - '7.2'
+
 dist: xenial
 
-env:
-    global:
-        - MIN_PHP=7.2
+script: vendor/bin/simple-phpunit tests/
