--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: php
 
 php:
-  - '7.2'
+  - '7.3'
 
 dist: xenial
 
 before_script:
  - composer self-update
- - composer install --prefer-source --no-interaction --dev
+ - composer install --prefer-source --no-interaction
 
 # Start mysql service
 services:
