--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ php:
 dist: bionic
 
 env:
-  - DB=sqlite
   - DB=mysql
+  #- DB=sqlite
 
 before_install:
  - composer self-update
@@ -21,6 +21,8 @@ services:
 install:
   - composer install
   - cp .env.travis .env
+  - php bin/console doctrine:database:create --env=test
+  - php bin/console doctrine:schema:create --env=test
 
 script: vendor/bin/simple-phpunit tests/
 
