--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ services:
 
 install:
   - composer install
-  - cp .env.travis .env
+  - cp .env.travis .env.local
   - php bin/console doctrine:database:create --env=test
   - php bin/console doctrine:schema:create --env=test
 
