--- a/.env.travis
+++ b/.env.travis
@@ -1,3 +1,3 @@
 # define your env variables for the test env here
-#DATABASE_URL="sqlite:///%kernel.project_dir%/var/grr_test.db"
-DATABASE_URL=mysql://root:@localhost:3306/grr
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/grr_test.db"
+#DATABASE_URL=mysql://root:@localhost:3306/grr
