qué bordel pfff

--- a/config/packages/doctrine_extension.yaml
+++ b/config/packages/doctrine_extension.yaml
@@ -5,3 +5,4 @@ doctrine:
                 MONTH: DoctrineExtensions\Query\Mysql\Month
                 YEAR: DoctrineExtensions\Query\Mysql\Year
                 DAY: DoctrineExtensions\Query\Mysql\Day
+                DATE: DoctrineExtensions\Query\Mysql\Date
