--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
+  "name": "jfsenechal/grrsf",
   "type": "project",
   "license": "proprietary",
+  "description": "Gestion de salles, matériels, ressources",
   "require": {
     "php": "^7.3",
     "ext-ctype": "*",
@@ -49,6 +51,7 @@
     "symfony/maker-bundle": "^1.0",
     "symfony/panther": "^0.4.1",
     "symfony/profiler-pack": "*",
+    "sensiolabs/security-checker": "^6.0",
     "symfony/test-pack": "^1.0",
     "theofidry/alice-data-fixtures": "^1.1"
   },
@@ -79,7 +82,8 @@
   "scripts": {
     "auto-scripts": {
       "cache:clear": "symfony-cmd",
-      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+      "assets:install %PUBLIC_DIR%": "symfony-cmd",
+      "security-checker security:check": "script"
     },
     "post-install-cmd": [
       "@auto-scripts"
