--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,7 +2,7 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
-    form_themes: ['bootstrap_4_layout.html.twig']
+    form_themes: ['bootstrap_4_layout.html.twig', 'form/grr_types.html.twig']
     paths:
         '%kernel.project_dir%/templates/admin': grr_admin
         '%kernel.project_dir%/templates/front': grr_front
