--- a/src/Fixtures/user.yaml
+++ b/src/Fixtures/user.yaml
@@ -1,11 +1,13 @@
 App\Entity\Security\User:
   user0:
     email: jf@marche.be
+    username: jf@marche.be
     name: Jf
     password: homer
     roles: ["ROLE_GRR_ADMINISTRATOR"]
   user_{alice, bob, fred, raoul, joseph, kevin}:
     email: '<current()>\@domain.be'
+    username: '<current()>\@domain.be'
     name: '<current()>'
     password: homer
 
