--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "symfony/form": "4.3.*",
     "symfony/framework-bundle": "4.3.*",
     "symfony/http-client": "4.3.*",
+    "symfony/ldap": "4.3.*",
     "symfony/mailer": "^4.3",
     "symfony/messenger": "4.3.*",
     "symfony/mime": "^4.3",
