--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,7 +9,14 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\Security\User
-                property: email
+                property: username
+        ldapsf:
+            ldap:
+                service: Symfony\Component\Security\Core\User\LdapUserProvider
+                base_dn: "%env(GRR_LDAP_BASE)%"
+                search_dn: '%env(GRR_LDAP_ADMIN)%'
+                search_password: '%env(GRR_LDAP_PWD)%'
+                default_roles: 'GRR_ROLE'
         my_ldap:
             ldap:
                 service: Symfony\Component\Ldap\Ldap
@@ -32,9 +39,9 @@ security:
              #   service: Symfony\Component\Ldap\Ldap
             guard:
                 authenticators:
-                    - App\Security\AppGrrAuthenticator
+                    - App\Security\GrrAuthenticator
                     - App\Security\LdapAuthenticator
-                entry_point: App\Security\AppGrrAuthenticator
+                entry_point: App\Security\GrrAuthenticator
             logout:
                 path: app_logout
                 # where to redirect after logout
