--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,17 +17,10 @@ security:
                 search_dn: '%env(GRR_LDAP_ADMIN)%'
                 search_password: '%env(GRR_LDAP_PWD)%'
                 default_roles: 'GRR_ROLE'
-        my_ldap:
-            ldap:
-                service: Symfony\Component\Ldap\Ldap
-                base_dn: "%env(GRR_LDAP_BASE)%"
-                search_dn: "%env(GRR_LDAP_ADMIN)%"
-                search_password: "%env(GRR_LDAP_PWD)%"
-                default_roles: ROLE_USER
-                uid_key: sAMAccountName
+                uid_key: 'sAMAccountName'
         all_users:
             chain:
-                providers: ['app_user_provider', 'my_ldap']
+                providers: ['app_user_provider', 'ldapsf']
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -35,8 +28,9 @@ security:
         main:
             anonymous: true
             provider: all_users
-            #form_login_ldap:
-             #   service: Symfony\Component\Ldap\Ldap
+            form_login_ldap:
+                service: App\Security\LdapAuth
+                provider: ldapsf
             guard:
                 authenticators:
                     - App\Security\GrrAuthenticator
