--- a/config/services.yaml
+++ b/config/services.yaml
@@ -40,7 +40,7 @@ services:
       $user: '%env(GRR_LDAP_ADMIN)%'
       $password: '%env(GRR_LDAP_PWD)%'
 
-  Symfony\Component\Ldap\Ldap:
+  App\Security\LdapAuth:
     arguments: ['@Symfony\Component\Ldap\Adapter\ExtLdap\Adapter']
   Symfony\Component\Ldap\Adapter\ExtLdap\Adapter:
     arguments:
@@ -50,3 +50,6 @@ services:
         options:
           protocol_version: 3
           referrals: false
+
+  Symfony\Component\Ldap\Ldap:
+    arguments: ['@Symfony\Component\Ldap\Adapter\ExtLdap\Adapter']
