--- a/src/Fixtures/user_random.yaml
+++ b/src/Fixtures/user_random.yaml
@@ -3,4 +3,5 @@ App\Entity\Security\User:
     name: '<name()>'
     first_name: '<firstName()>'
     email (unique): '<email()>'
+    username (unique): '<username()>'
     password: 'homer'
