--- a/src/GrrBundle/Resources/config/security.yaml
+++ b/src/GrrBundle/Resources/config/security.yaml
@@ -1,4 +1,4 @@
 #security:
-
+#L'administrateur hérite de tout
 role_hierarchy:
-    ROLE_GRR_ADMINISTRATOR: [ROLE_GRR_ADMINISTRATOR_AREA, ROLE_GRR_MANAGER_AREA, ROLE_GRR_MANAGER_USER, ROLE_ALLOWED_TO_SWITCH]
+    ROLE_GRR_ADMINISTRATOR: [ROLE_GRR_ACTIVE_USER, ROLE_GRR_MANAGER_USER]
