--- a/.env.travis
+++ b/.env.travis
@@ -1,3 +1,7 @@
 # define your env variables for the test env here
 DATABASE_URL="sqlite:///%kernel.project_dir%/var/grr_test.db"
 #DATABASE_URL=mysql://root:@localhost:3306/grr
+GRR_LDAP_URL="ldap.domain.be"
+GRR_LDAP_BASE="OU=USERS,DC=domain,DC=be"
+GRR_LDAP_ADMIN="CN=admin,OU=appli,DC=domain,DC=be"
+GRR_LDAP_PWD="pwd"
