--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
     "symfony/profiler-pack": "*",
     "sensiolabs/security-checker": "^6.0",
     "symfony/test-pack": "^1.0",
-    "theofidry/alice-data-fixtures": "^1.1"
+    "theofidry/alice-data-fixtures": "^1.1",
+    "symfony/web-server-bundle": "4.3.*"
   },
   "config": {
     "preferred-install": {
