--- a/src/Fixtures/entry.yaml
+++ b/src/Fixtures/entry.yaml
@@ -5,33 +5,39 @@ App\Entity\Entry:
     end_time: '<carbonDateTime(2019,8,20,14,10)>'
     room: '@room_box'
     type: '@type_entry_C'
+    created_by: 'jf'
   entry_2:
     name: 'Réunion pssp'
     start_time: '<carbonDateTime(2019,8,20,9,0)>'
     end_time: '<carbonDateTime(2019,8,20,15,35)>'
     room: '@room_relax'
     type: '@type_entry_D'
+    created_by: 'jf'
   entry_3:
     name: 'Réunion henalux'
     start_time: '<carbonDateTime(2019,8,21,16,0)>'
     end_time: '<carbonDateTime(2019,8,21,17,20)>'
     room: '@room_relax'
     type: '@type_entry_A'
+    created_by: 'jf'
   entry_4:
     name: 'Réunion timesquare'
     start_time: '<carbonDateTime(2019,8,19,8,0)>'
     end_time: '<carbonDateTime(2019,8,19,12,40)>'
     room: '@room_digital'
     type: '@type_entry_F'
+    created_by: 'jf'
   entry_5:
     name: 'Réunion conseillers'
     start_time: '<carbonDateTime(2019,9,19,8,25)>'
     end_time: '<carbonDateTime(2019,9,19,9,45)>'
     room: '@room_conseil'
     type: '@type_entry_E'
+    created_by: 'jf'
   entry_6:
     name: 'Réunion détente'
     start_time: '<carbonDateTime(2019,10,1,11,0)>'
     end_time: '<carbonDateTime(2019,10,1,17,40)>'
     room: '@room_cafetaria'
     type: '@type_entry_D'
+    created_by: 'jf'
