--- a/src/Fixtures/entry_with_periodicity.yaml
+++ b/src/Fixtures/entry_with_periodicity.yaml
@@ -1,54 +1,81 @@
 App\Entity\Entry:
-  entry_every_day:
+  entry_every_day_{2019_12_2, 2019_12_03, 2019_12_04, 2019_12_05}:
     name: 'Tous les jours pendant 3 jours'
-    start_time: '<carbonDateTime(2019,12,2,10,0)>'
-    end_time: '<carbonDateTime(2019,12,2,14,10)>'
+    start_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_10_00)>'
+    #start_time2: '<carbonDateTime(2019,12,2,10,0)>'
+    #end_time2: '<carbonDateTime(2019,12,2,14,10)>'
+    end_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_14_10)>'
     room: '@room_college'
     type: '@type_entry_A'
-  entry_every_month_same_day:
+    periodicity: '@periodicity_day'
+    created_by: 'jf'
+  entry_every_month_same_day_{2019_03_05, 2019_04_05, 2019_05_05, 2019_06_05, 2019_07_05}:
     name: 'Tous les mois le 5'
-    start_time: '<carbonDateTime(2019,3,5,9,0)>'
-    end_time: '<carbonDateTime(2019,3,5,15,35)>'
+    start_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_09_00)>'
+    #start_time: '<carbonDateTime(2019,3,5,9,0)>'
+    #end_time: '<carbonDateTime(2019,3,5,15,35)>'
+    end_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_15_35)>'
     room: '@room_digital'
     type: '@type_entry_D'
-  entry_every_month_same_weekday:
+    periodicity: '@periodicity_month_same_day'
+    created_by: 'jf'
+  entry_every_month_same_weekday_{2019_05_08, 2019_06_12, 2019_07_10, 2019_08_14, 2019_09_11, 2019_10_09}:
     name: 'Tous les mois le 2ième mercredi'
-    start_time: '<carbonDateTime(2019,5,8,13,0)>'
-    end_time: '<carbonDateTime(2019,5,8,15,20)>'
+    start_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_13_00)>'
+    #start_time: '<carbonDateTime(2019,5,8,13,0)>'
+    #end_time: '<carbonDateTime(2019,5,8,15,20)>'
+    end_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_15_20)>'
     room: '@room_cafetaria'
     type: '@type_entry_B'
-  entry_every_year:
+    periodicity: '@periodicity_month_same_week_day'
+    created_by: 'jf'
+  entry_every_year_{2019_10_04, 2020_10_04, 2021_10_04, 2022_10_04}:
     name: 'Tous les ans le 4 octobre'
-    start_time: '<carbonDateTime(2019,10,4,9,0)>'
-    end_time: '<carbonDateTime(2019,10,4,12,40)>'
+    start_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_9_00)>'
+    end_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_12_40)>'
+    #start_time: '<carbonDateTime(2019,10,4,9,0)>'
+    #end_time: '<carbonDateTime(2019,10,4,12,40)>'
     room: '@room_relax'
     type: '@type_entry_F'
-  entry_every_week_1:
+    periodicity: '@periodicity_year'
+    created_by: 'jf'
+  entry_every_week_1_{2018_06_20, 2018_06_25, 2018_06_26, 2018_07_02, 2018_07_03, 2018_07_09, 2018_07_10, 2018_07_16, 2018_07_17, 2018_07_23, 2018_07_24, 2018_07_30, 2018_07_31, 2018_08_06, 2018_08_07, 2018_08_13, 2018_08_14, 2018_08_20}:
     name: 'Toutes les semaines, lundi et mardi'
-    start_time: '<carbonDateTime(2018,6,20,10,15)>'
-    end_time: '<carbonDateTime(2018,6,20,14,45)>'
+    start_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_10_15)>'
+    end_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_14_45)>'
+    #start_time: '<carbonDateTime(2018,6,20,10,15)>'
+    #end_time: '<carbonDateTime(2018,6,20,14,45)>'
     room: '@room_conseil'
     type: '@type_entry_E'
-  entry_every_week_2:
+    periodicity: '@periodicity_week_1'
+    created_by: 'jf'
+  entry_every_week_2_{2017_02_01, 2017_02_08, 2017_02_11, 2017_02_22, 2017_02_25, 2017_03_08, 2017_03_11, 2017_03_22, 2017_03_25, 2017_04_05, 2017_04_08}:
     name: 'Toutes les 2 semaines, mercredi et samedi'
-    start_time: '<carbonDateTime(2017,2,1,11,0)>'
-    end_time: '<carbonDateTime(2017,2,1,16,40)>'
+    start_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_11_00)>'
+    end_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_16_40)>'
+    #start_time: '<carbonDateTime(2017,2,1,11,0)>'
+    #end_time: '<carbonDateTime(2017,2,1,16,40)>'
     room: '@room_cafetaria'
     type: '@type_entry_D'
-  entry_with_common_date:
+    created_by: 'jf'
+    periodicity: '@periodicity_week_2'
+  entry_with_common_date_{2019_12_03, 2019_12_04, 2019_12_05, 2019_12_06}:
     name: 'Entry avec une date en commun'
-    start_time: '<carbonDateTime(2019,12,3,14,40)>'
-    end_time: '<carbonDateTime(2019,12,3,16,35)>'
+    start_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_14_40)>'
+    end_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_16_35)>'
+    #start_time: '<carbonDateTime(2019,12,3,14,40)>'
+    #end_time: '<carbonDateTime(2019,12,3,16,35)>'
     room: '@room_meeting'
     type: '@type_entry_D'
-  entry_with_common_date_other_room:
+    periodicity: '@periodicity_with_common_day'
+    created_by: 'jf'
+  entry_with_common_date_other_room_{2019_12_3, 2019_12_04, 2019_12_05, 2019_12_06}:
     name: 'Entry avec une date en commun autre room'
-    start_time: '<carbonDateTime(2019,12,3,14,40)>'
-    end_time: '<carbonDateTime(2019,12,3,16,35)>'
+    start_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_14_40)>'
+    end_time: '<carbonFromFormat("Y_m_d_H_i", <current()>_16_35)>'
+    #start_time: '<carbonDateTime(2019,12,3,14,40)>'
+    #end_time: '<carbonDateTime(2019,12,3,16,35)>'
     room: '@room_conseil'
     type: '@type_entry_D'
-
-
-
-
-
+    periodicity: '@periodicity_with_common_day_other_room'
+    created_by: 'jf'
