--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
   "require": {
     "php": "^7.3",
     "ext-ctype": "*",
+    "ext-curl": "*",
     "ext-iconv": "*",
+    "ext-json": "*",
+    "beberlei/doctrineextensions": "^1.2",
+    "nesbot/carbon": "^2.21",
     "sensio/framework-extra-bundle": "^5.1",
     "symfony/asset": "4.3.*",
     "symfony/console": "4.3.*",
@@ -17,9 +21,14 @@
     "symfony/framework-bundle": "4.3.*",
     "symfony/http-client": "4.3.*",
     "symfony/intl": "4.3.*",
+    "symfony/ldap": "4.3.*",
+    "symfony/mailer": "^4.3",
+    "symfony/messenger": "4.3.*",
+    "symfony/mime": "^4.3",
     "symfony/monolog-bundle": "^3.1",
     "symfony/orm-pack": "*",
     "symfony/process": "4.3.*",
+    "symfony/property-access": "4.3.*",
     "symfony/security-bundle": "4.3.*",
     "symfony/serializer-pack": "*",
     "symfony/translation": "4.3.*",
@@ -27,14 +36,6 @@
     "symfony/validator": "4.3.*",
     "symfony/web-link": "4.3.*",
     "symfony/yaml": "4.3.*",
-    "ext-curl": "*",
-    "ext-json": "*",
-    "beberlei/doctrineextensions": "^1.2",
-    "nesbot/carbon": "^2.21",
-    "symfony/ldap": "4.3.*",
-    "symfony/mailer": "^4.3",
-    "symfony/messenger": "4.3.*",
-    "symfony/mime": "^4.3",
     "twig/extensions": "^1.5",
     "twig/twig": "^2.11",
     "webmozart/assert": "^1.4"
