--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
     "ext-json": "*",
     "beberlei/doctrineextensions": "^1.2",
     "nesbot/carbon": "^2.21",
+    "ramsey/uuid": "^3.8",
+    "ramsey/uuid-doctrine": "^1.5",
     "sensio/framework-extra-bundle": "^5.1",
     "symfony/asset": "4.3.*",
     "symfony/console": "4.3.*",
