--- a/.env
+++ b/.env
@@ -33,3 +33,7 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
