--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,6 +14,16 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        api:
+            pattern: ^/api
+            #http_basic:
+            #    realm: Secured Area
+            #provider: app_user_provider
+            guard:
+                authenticators:
+                    - App\Security\AppTokenAuthenticator
+
         main:
             anonymous: ~
             guard:
