--- a/composer.json
+++ b/composer.json
@@ -44,8 +44,10 @@
     "webmozart/assert": "^1.4"
   },
   "require-dev": {
+    "behat/behat": "^3.5",
     "doctrine/data-fixtures": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.2",
+    "friends-of-behat/symfony-extension": "^2.0",
     "friendsofphp/php-cs-fixer": "^2.15",
     "phpspec/phpspec": "^5.1",
     "phpstan/extension-installer": "^1.0",
@@ -53,14 +55,14 @@
     "phpstan/phpstan-doctrine": "^0.11.5",
     "phpstan/phpstan-symfony": "^0.11.6",
     "rector/rector": "^0.5.9",
+    "sensiolabs/security-checker": "^6.0",
     "symfony/debug-pack": "*",
     "symfony/maker-bundle": "^1.0",
     "symfony/panther": "^0.4.1",
     "symfony/profiler-pack": "*",
-    "sensiolabs/security-checker": "^6.0",
     "symfony/test-pack": "^1.0",
-    "theofidry/alice-data-fixtures": "^1.1",
-    "symfony/web-server-bundle": "4.3.*"
+    "symfony/web-server-bundle": "4.3.*",
+    "theofidry/alice-data-fixtures": "^1.1"
   },
   "config": {
     "preferred-install": {
