--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,8 @@
     "symfony/web-link": "4.3.*",
     "symfony/yaml": "4.3.*",
     "twig/extensions": "^1.5",
+    "twig/extra-bundle": "^2.12",
+    "twig/intl-extra": "^2.12",
     "twig/twig": "^2.11",
     "webmozart/assert": "^1.4"
   },
