--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "ext-json": "*",
     "api-platform/api-pack": "^1.2",
     "beberlei/doctrineextensions": "^1.2",
+    "behatch/contexts": "^3.2",
     "nesbot/carbon": "^2.21",
     "ramsey/uuid": "^3.8",
     "ramsey/uuid-doctrine": "^1.5",
@@ -46,7 +47,9 @@
     "webmozart/assert": "^1.4"
   },
   "require-dev": {
-    "behat/behat": "^3.5",
+    "behat/mink": "^1.7@dev",
+    "behat/mink-browserkit-driver": "^1.3",
+    "behat/mink-extension": "^2.3",
     "doctrine/data-fixtures": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.2",
     "friends-of-behat/symfony-extension": "^2.0",
